Added sign in with Google

--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -7,7 +7,9 @@
     <p class="secret-text">Jack Bauer is my hero.</p>
     <hr>
     
-    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
+    <form action="/logout" method="post">
+      <button type="submit" class="btn btn-light btn-lg">Log out</button>
+    </form>
     <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
   </div>
 </div>
